# heartwith-server

./: Cargo.toml  README.md  build-linux-amd64-server.sh
.github/workflows/: ci.yml
docs/: API.md  DATABASE.md  PROTOCOL.md
server/: Cargo.toml
server/src/: main.rs
web-fallback/: index.html
