[package]
name = "heartwith-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
axum = "0.8.4"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "sqlite"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["fs", "cors", "trace", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1.3"
